infrastructure/cilium-policies/000-allow-all.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "allow-cidr"
spec:
  description: "Allow all the traffic originating from a specific CIDR"
  endpointSelector:
    matchExpressions:
      - key: reserved:ingress
        operator: Exists
  ingress:
    - fromCIDRSet:
        # Please update the CIDR to match your environment
        - cidr: 192.168.178.179/32
