infrastructure/cilium-policies/001-deny-all.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-external-kubectl-access
spec:
  endpointSelector:
    matchLabels:
      k8s-app: kube-apiserver
  ingress:
    - fromCIDR:
        - "192.168.178.2/32"
        - "192.168.178.179/32"
      toPorts:
        - ports:
            - port: "8090"
              protocol: TCP
