infrastructure/cilium-policies/002-allow-kube-dns.yaml
# Example for kube-dns pods to allow ingress from other pods
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-kube-dns-ingress
  namespace: kube-system # Policy specifically for kube-system namespace
spec:
  endpointSelector:
    matchLabels:
      k8s-app: kube-dns # Selects the kube-dns pods
  ingress:
    - fromEndpoints:
        - matchLabels: {} # Allows ingress from ALL pods (any label)
          # No namespaceSelector here if you want it to apply cluster-wide for ingress
          # Or, specify: namespaceSelector: {} if you want to allow from all namespaces
          # Or, be more specific like: namespaceSelector: matchLabels: kubernetes.io/metadata.name: <app-namespace>
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
