infrastructure/cilium-policies/003-allow-kube-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-kube-system-egress-apiserver
  namespace: kube-system
spec:
  endpointSelector: {}
  egress:
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-apiserver # Example label
      toPorts:
        - ports:
            - port: "6443" # Default kube-apiserver port
              protocol: TCP
