infrastructure/cilium-policies/004-allow-kube-ingress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-kube-system-ingress-from-host
  namespace: kube-system
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - host
      # Specify ports and protocols if needed for specific services
