infrastructure/cilium-policies/005-allow-kube-namespace.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-kube-system-ingress-internal
  namespace: kube-system
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels: {} # Allows from any pod within the kube-system namespace
      # Specify ports and protocols for the services that need ingress
