infrastructure/cilium-policies/006-test.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-all-pods-to-kube-dns # No namespace here
spec:
  endpointSelector: {} # Selects ALL pods in the cluster
  egress:
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
          namespaceSelector: # Target specific namespace for DNS service
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP # DNS can use both
